--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.0.2",
-    "@angular/cdk": "^10.0.1",
     "@angular/common": "~10.0.2",
     "@angular/compiler": "~10.0.2",
     "@angular/core": "~10.0.2",
@@ -21,6 +20,9 @@
     "@angular/platform-browser": "~10.0.2",
     "@angular/platform-browser-dynamic": "~10.0.2",
     "@angular/router": "~10.0.2",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/store": "^2.2.3",
+    "ngx-virtual-scroller": "^4.0.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
